# OpenGLInaGame

./: .gitignore  CMakeLists.txt  unique.txt
Fall22/: Anim.cpp  Anim.h  CMakeLists.txt  Entity.cpp  Entity.h  Fall22.cpp  Text.cpp  Text.h
Fall22/assets/shaders/: defaultFoundryFragment.glsl  defaultFoundryVertex.glsl
Foundry/: CMakeLists.txt  Event.cpp  Event.h  Foundry.h  FoundryApp.cpp  FoundryApp.h  FoundryUtil.h  FoundryWindow.cpp  FoundryWindow.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
Foundry/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h
Foundry/OpenGLCode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt
